# coinbase-pro-rs

./: .travis.yml  1.err  Cargo.toml  README.md  README.txt
.github/workflows/: rust.yml
examples/: private_sync.rs  public_async.rs  public_sync.rs  websocket.rs
src/: adapters.rs  error.rs  lib.rs  private.rs  public.rs  structs.rs  utils.rs  wsfeed.rs
src/structs/: mod.rs  other.rs  private.rs  public.rs  reqs.rs  ws.rs  wsfeed.rs
tests/: adapters.rs  private.rs  public.rs  ws.rs
tests/common/: mod.rs
