[package]
name = "coinbase-pro-rs"
version = "0.6.2"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/coinbase-pro-rs"
description = "Coinbase pro client for Rust"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin", "websocket" ]

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
chrono = { version = "0.4.9", features = [ "serde" ] }
futures = { version = "0.3.8" }
futures-util = { version = "0.3.8", features = ["compat"] }
hmac = "0.10.1"
hyper = { version = "0.14.2", features = ["stream", "client", "http1"] }
hyper-tls = "0.5.0"
log = "0.4.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.2"
thiserror = "1.0.22"
time = "0.2.24"
tokio = { version = "1.0.2", features = ["full"] }
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
url = "2.1.0"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
